i do not know what the fuck i modified

--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -54,7 +54,7 @@
 		</div>
 
 		<ul class="user-rooms">
-			<li><h3 style='text-align:center;margin-bottom:1em;'>Your rooms</h3></li>
+			<li><h3 style='text-align:center;margin-bottom:1em;'>Your conversations</h3></li>
 			<li id="append-here"></li>
 		</ul>
 	{{else}}
