--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -47,7 +47,7 @@
 				<div class="vam">
 					<img src="/images/search.png">
 					<h6>Interests</h6>
-					<span>find interesting chatrooms*</span>
+					<span>find interesting chatrooms</span>
 				</div>
 			</div>
 			<div class="feature">
@@ -83,7 +83,8 @@
 				<li><strike>Better <a href="#mdc-modal">Markdown</a> support</strike></li>
 				<li>Code highlighting?</li>
 				<li>Implement notification system logic</li>
-				<li><strike>Tagging of chatrooms *in progress*</strike></li>
+				<li><strike>Tagging of chatrooms</strike></li>
+				<li>Global stats</li>
 			</ul>
 			<br>
 			Do you want to contribute or have a suggestion to make this better?	<a href="https://github.com/christian-fei/opentalk.me">Fork away!</a>
