--- a/client/views/markdownCheatsheet.html
+++ b/client/views/markdownCheatsheet.html
@@ -36,7 +36,7 @@
 				Code is introduced <b>and</b> ended with two backticks, like this:
 				<br>
 				``<br>
-				    var s = "JavaScript syntax highlighting"; <br>
+				    var s = "ahoi"; <br>
 				    alert(s); <br>
 				``
 				<br>
