--- a/client/views/room.html
+++ b/client/views/room.html
@@ -4,7 +4,11 @@
 		<div class="online-users-count"><span>{{onlineUsersCount}}</span></div>
 	{{/isolate}}
 
-	<div class="fixed-sidebar-background"></div>
+	<div class="fixed-sidebar-background">
+		<div class="mini-header-wrapper">
+			<div class="mini-header"></div>
+		</div>
+	</div>
 	<aside class="fixed-sidebar">
 		<a href="/" title='to the homepage' class='go-home-you-are-drunk'>
 			<img src="/images/logo_even_dark.png" alt="" class="logo">
