--- a/client/sass/_vars.scss
+++ b/client/sass/_vars.scss
@@ -3,11 +3,11 @@ $limit-extend:40em;
 
 $sidebar-width:17em;
 
-$offset-main:6em;
+$offset-main:10em;
 
 $blanket-width:22em;
 
-$mobile-view: $limit + $sidebar-width + $offset-main + 2em;
+$mobile-view: $limit + $sidebar-width  + 2em;
 
 $color-main:lighten(#2980b9,10%);
 
