sidebar kinda fixed

--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -85,6 +85,7 @@
 				<li>Implement notification system logic</li>
 				<li><strike>Tagging of chatrooms</strike></li>
 				<li>Global stats</li>
+				<li>@username reply</li>
 			</ul>
 			<br>
 			Do you want to contribute or have a suggestion to make this better?	<a href="https://github.com/christian-fei/opentalk.me">Fork away!</a>
