--- a/client/sass/_search.scss
+++ b/client/sass/_search.scss
@@ -2,6 +2,10 @@
 	list-style-type: none;
 
 	li{
+		display: inline-block;
+	}
+
+	a{
 		padding:.3em .6em;
 		margin:.4em ;
 		font-size: .9em;
@@ -11,10 +15,8 @@
 		display: inline-block;
 		color: black;
 
+		text-decoration: none;
 		@extend .fly-in-right;
-		a{
-			text-decoration: none;
-		}
 	}
 }
 
