--- a/client/css/main.css
+++ b/client/css/main.css
@@ -810,7 +810,7 @@ SUPER SLICK TRANSFORMS
 }
 /* line 120, ../sass/_sidebar.scss */
 .userinfo .user-avatar {
-  height: 3em;
+  height: 3.5em;
   border: 1px solid black;
   border-radius: 50%;
   overflow: hidden;
@@ -1726,6 +1726,11 @@ http://www.tipue.com/tipr
   color: #444444;
 }
 
+/* line 1, ../sass/_modal.scss */
+.modal-header {
+  background: #ffbb00;
+}
+
 /**
  * CSS Modal
  * Modal as reusable module
@@ -1742,21 +1747,21 @@ http://www.tipue.com/tipr
 /*
  * Configuration
  */
-/* line 28, ../sass/_modal.scss */
+/* line 33, ../sass/_modal.scss */
 html {
   overflow-y: scroll;
 }
 
-/* line 32, ../sass/_modal.scss */
+/* line 37, ../sass/_modal.scss */
 .has-overlay {
   overflow: hidden;
 }
-/* line 35, ../sass/_modal.scss */
+/* line 40, ../sass/_modal.scss */
 .has-overlay > body {
   height: 100%;
 }
 
-/* line 41, ../sass/_modal.scss */
+/* line 46, ../sass/_modal.scss */
 .semantic-content {
   -webkit-transform: translate(0, 100%);
   -moz-transform: translate(0, 100%);
@@ -1776,7 +1781,7 @@ html {
   line-height: 1.3;
   display: none\9;
 }
-/* line 65, ../sass/_modal.scss */
+/* line 70, ../sass/_modal.scss */
 .semantic-content:target {
   -webkit-transform: translate(0, 0);
   -moz-transform: translate(0, 0);
@@ -1785,15 +1790,15 @@ html {
   transform: translate(0, 0);
   opacity: 1;
 }
-/* line 79, ../sass/_modal.scss */
+/* line 84, ../sass/_modal.scss */
 .is-active.semantic-content {
   display: block\9;
 }
-/* line 84, ../sass/_modal.scss */
+/* line 89, ../sass/_modal.scss */
 .semantic-content:target {
   display: block\9;
 }
-/* line 90, ../sass/_modal.scss */
+/* line 95, ../sass/_modal.scss */
 .semantic-content .modal-inner {
   position: absolute;
   top: 50px;
@@ -1807,7 +1812,7 @@ html {
   -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
 }
-/* line 107, ../sass/_modal.scss */
+/* line 112, ../sass/_modal.scss */
 .semantic-content .modal-inner > img,
 .semantic-content .modal-inner > video,
 .semantic-content .modal-inner > iframe {
@@ -1815,21 +1820,21 @@ html {
   height: auto;
   min-height: 300px;
 }
-/* line 113, ../sass/_modal.scss */
+/* line 118, ../sass/_modal.scss */
 .semantic-content .modal-inner > img {
   width: auto;
   max-width: 100%;
 }
-/* line 120, ../sass/_modal.scss */
+/* line 125, ../sass/_modal.scss */
 .semantic-content header {
   border-bottom: 1px solid #dddddd;
   padding: 0 1.2em;
 }
-/* line 124, ../sass/_modal.scss */
+/* line 129, ../sass/_modal.scss */
 .semantic-content header > h2 {
   margin: 0.5em 0;
 }
-/* line 131, ../sass/_modal.scss */
+/* line 136, ../sass/_modal.scss */
 .semantic-content .modal-content {
   max-height: 400px;
   max-height: 70vh;
@@ -1838,24 +1843,25 @@ html {
   overflow-x: hidden;
   overflow-y: auto;
 }
-/* line 139, ../sass/_modal.scss */
+/* line 144, ../sass/_modal.scss */
 .semantic-content .modal-content > * {
   max-width: 100%;
 }
-/* line 146, ../sass/_modal.scss */
+/* line 151, ../sass/_modal.scss */
 .semantic-content footer {
   border-top: 1px solid white;
   padding: 0 1.2em 18px;
   background: #f0f0f0;
   border-radius: 2px;
 }
-/* line 155, ../sass/_modal.scss */
+/* line 160, ../sass/_modal.scss */
 .semantic-content .modal-close {
   display: block;
   text-indent: -100px;
   overflow: hidden;
+  background: #ffbb00;
 }
-/* line 161, ../sass/_modal.scss */
+/* line 167, ../sass/_modal.scss */
 .semantic-content .modal-close:before {
   content: '';
   position: absolute;
@@ -1866,7 +1872,7 @@ html {
   z-index: 10;
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAEElEQVR42gEFAPr/AAAAAMwA0QDNTiUx4gAAAABJRU5ErkJggg==");
 }
-/* line 175, ../sass/_modal.scss */
+/* line 181, ../sass/_modal.scss */
 .semantic-content .modal-close:after {
   content: '\00d7';
   position: absolute;
@@ -1882,25 +1888,25 @@ html {
   text-indent: 0;
 }
 @media screen and (max-width: 690px) {
-  /* line 197, ../sass/_modal.scss */
+  /* line 203, ../sass/_modal.scss */
   .semantic-content .modal-inner {
     width: auto;
     left: 20px;
     right: 20px;
     margin-left: 0;
   }
-  /* line 204, ../sass/_modal.scss */
+  /* line 210, ../sass/_modal.scss */
   .semantic-content .modal-close {
     margin-right: 0;
   }
-  /* line 209, ../sass/_modal.scss */
+  /* line 215, ../sass/_modal.scss */
   .semantic-content .modal-close:after {
     margin-left: auto;
     right: 1em;
   }
 }
 @media screen and (max-width: 30em) {
-  /* line 41, ../sass/_modal.scss */
+  /* line 46, ../sass/_modal.scss */
   .semantic-content {
     -webkit-transform: translate(0, 400px);
     -webkit-transform: translate3d(0, 100%, 0);
@@ -1914,7 +1920,7 @@ html {
     height: 100%;
     bottom: auto;
   }
-  /* line 233, ../sass/_modal.scss */
+  /* line 239, ../sass/_modal.scss */
   .semantic-content:target {
     -webkit-transition: -webkit-transform .25s ease-in-out;
     -moz-transition: -moz-transform .25s ease-in-out;
@@ -1922,14 +1928,14 @@ html {
     -ms-transition: -ms-transform .25s ease-in-out;
     transition: transform .25s ease-in-out;
   }
-  /* line 241, ../sass/_modal.scss */
+  /* line 247, ../sass/_modal.scss */
   .semantic-content:before {
-    background-color: #27aae2;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#27aae2), to(#1c9cd3));
-    background-image: -webkit-linear-gradient(top, #27aae2, #1c9cd3);
-    background-image: -moz-linear-gradient(top, #27aae2, #1c9cd3);
-    background-image: -o-linear-gradient(top, #27aae2, #1c9cd3);
-    background-image: linear-gradient(to bottom, #27aae2, #1c9cd3);
+    background-color: #ffbb00;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#ffbb00), to(#e6a800));
+    background-image: -webkit-linear-gradient(top, #ffbb00, #e6a800);
+    background-image: -moz-linear-gradient(top, #ffbb00, #e6a800);
+    background-image: -o-linear-gradient(top, #ffbb00, #e6a800);
+    background-image: linear-gradient(to bottom, #ffbb00, #e6a800);
     content: '';
     position: fixed;
     top: 0;
@@ -1940,7 +1946,7 @@ html {
     -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
   }
-  /* line 260, ../sass/_modal.scss */
+  /* line 266, ../sass/_modal.scss */
   .semantic-content .modal-inner {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -1954,20 +1960,20 @@ html {
     -webkit-box-shadow: none;
     box-shadow: none;
   }
-  /* line 275, ../sass/_modal.scss */
+  /* line 281, ../sass/_modal.scss */
   .semantic-content .modal-content {
     max-height: none;
   }
-  /* line 279, ../sass/_modal.scss */
+  /* line 285, ../sass/_modal.scss */
   .semantic-content .modal-close {
     right: auto;
     text-decoration: none;
   }
-  /* line 283, ../sass/_modal.scss */
+  /* line 289, ../sass/_modal.scss */
   .semantic-content .modal-close:before {
     display: none;
   }
-  /* line 287, ../sass/_modal.scss */
+  /* line 293, ../sass/_modal.scss */
   .semantic-content .modal-close:after {
     content: attr(data-close);
     top: 0.4em;
@@ -1979,14 +1985,14 @@ html {
   }
 }
 @media screen and (max-height: 46em) and (min-width: 30em) {
-  /* line 301, ../sass/_modal.scss */
+  /* line 307, ../sass/_modal.scss */
   .semantic-content .modal-content {
     max-height: 340px;
     max-height: 50vh;
   }
 }
 @media screen and (max-height: 36em) and (min-width: 30em) {
-  /* line 308, ../sass/_modal.scss */
+  /* line 314, ../sass/_modal.scss */
   .semantic-content .modal-content {
     max-height: 265px;
     max-height: 40vh;
@@ -1994,7 +2000,7 @@ html {
 }
 
 @media screen and (min-width: 30em) {
-  /* line 317, ../sass/_modal.scss */
+  /* line 323, ../sass/_modal.scss */
   .semantic-content {
     -webkit-transition: opacity 0.4s;
     -o-transition: opacity 0.4s;
