--- a/client/sass/_modal.scss
+++ b/client/sass/_modal.scss
@@ -1,3 +1,8 @@
+.modal-header{
+	background:$color-main;
+}
+
+
 /**
  * CSS Modal
  * Modal as reusable module
@@ -20,7 +25,7 @@
  */
 $modal-border-color: #ddd;
 $modal-max-width: 650px;
-$modal-mobile-header: #27aae2;
+$modal-mobile-header: $color-main;
 $modal-layer: 10000; // Set high z-index to appear above all other content
 
 
@@ -156,6 +161,7 @@ html {
 		display: block;
 		text-indent: -100px;
 		overflow: hidden;
+		background:$color-main;
 
 		// Background as close
 		&:before {
