--- a/client/views/markdownCheatsheet.html
+++ b/client/views/markdownCheatsheet.html
@@ -1,7 +1,7 @@
 <template name="markdownCheatsheet">
 	<section class="semantic-content" id="mdc-modal" tabindex="-1" role="dialog" aria-labelledby="mdc-modal" aria-hidden="true">
 	    <div class="modal-inner">
-	        <header id="modal-label">
+	        <header id="modal-label" class='modal-header'>
 	        	<h3>Markdown Cheatsheet</h3>
 	        </header>
 	        <div class="modal-content">
