--- a/client/sass/_sidebar.scss
+++ b/client/sass/_sidebar.scss
@@ -176,6 +176,7 @@ $ou-width: 10em;
 		display: inline-block;
 	}
 	.online-user{
+		font-size: .9em;
 		text-overflow: ellipsis;
 		white-space: nowrap;
 	    overflow: hidden;
