--- a/client/views/markdownCheatsheet.html
+++ b/client/views/markdownCheatsheet.html
@@ -8,6 +8,8 @@
 				<b>OpenTalk</b> supports your nerdy needs. <br/>
 				Basic Markdown parsing (in the <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet" target='_blank'>Github fashion</a>), like: <br/>
 
+				<br>
+
 				<h4>Headings</h4>
 				# H1<br/>
 				## H2<br/>
@@ -16,12 +18,15 @@
 				##### H5<br/>
 				###### H6<br/>
 
+				<br>
+
 				<h4>Emphasis</h4>
 				Emphasis, aka italics, with *asterisks* or _underscores_. <br/>
 				Strong emphasis, aka bold, with **asterisks** or __underscores__. <br/>
-				Combined emphasis with **asterisks and _underscores_**. <br/>
 				Strikethrough uses two tildes. ~~Scratch this.~~ <br>
-				Horizontal lines are created with three dashes ---
+				Horizontal lines are created with three dashes --- <br>
+
+				<br>
 				
 				<h4>Lists</h4>
 				<small>currently only unordered lists are supported</small>
@@ -29,6 +34,8 @@
 				* Unordered list can use asterisks <br/>
 				- Or minuses <br/>
 				+ Or pluses <br/>
+				
+				<br>
 
 				<h4>Code</h4>
 				Code can be inline or multi-line (PS: shift+enter to create a new line)
@@ -44,6 +51,14 @@
 				<br>
 				Do you have suggestions or want to contribute? <br>
 				That would be <a href="https://github.com/christian-fei/opentalk.me/blob/master/client/js/markdown.js">dope</a>
+				
+				<br>
+
+				<h4>Limitations</h4>
+				Headings and lists can only be created at the very beginning of a message and cannot be over multiple lines
+				<br>
+				Again, if you some Regex magic, your help would <a href="https://github.com/christian-fei/opentalk.me/blob/master/client/js/markdown.js">rock my day</a>
+
 	        </div>
 	    </div>
 	    <a href="#!" class="modal-close" title="Close" data-close="Close"
