--- a/client/views/markdownCheatsheet.html
+++ b/client/views/markdownCheatsheet.html
@@ -61,7 +61,7 @@
 
 	        </div>
 	    </div>
-	    <a href="#!" class="modal-close" title="Close" data-close="Close"
+	    <a href="#" class="modal-close" title="Close" data-close="Close"
 	        data-dismiss="modal">×</a>
 	</section>
 </template>
