--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -73,6 +73,29 @@
 			</div>
 		</div>
 	</section>
+	<section class="globalstats">
+		<div class="globalstats-wrapper">
+			<h1 class='globalstats-header'>Global stats</h1>
+			<div class="globalstat">
+				<div class="vam">
+					<h3>Messages</h3>
+					<h4 id='globalMessagesCount'></h4>
+				</div>
+			</div>
+			<div class="globalstat">
+				<div class="vam">
+					<h3>Users online</h3>
+					<h4 id='globalOnlineUsersCount'></h4>
+				</div>
+			</div>
+			<div class="globalstat">
+				<div class="vam">
+					<h3>Rooms</h3>
+					<h4 id='globalRoomsCount'></h4>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section class="todos">
 		<div class="todos-wrapper">
 			<h4>TODO</h4>
@@ -115,12 +138,18 @@
 			<br/>
 
 			<p>
-				Made with love by <a href="https://twitter.com/christian_fei" target='_blank'>christian_fei</a> with <a href="http://meteor.com">Meteor</a>
-				<br>
-				proudly hosted on <a href="https://www.digitalocean.com/?refcode=880e8f681b50" target='_blank'>DigitalOcean</a>
-			</p>	
-
-			<br/>
+				<p>
+					Made with love by <a href="https://twitter.com/christian_fei" target='_blank'>christian_fei</a> with <a href="http://meteor.com">Meteor</a>
+				</p>
+				<p>
+					proudly hosted on <a href="https://www.digitalocean.com/?refcode=880e8f681b50" target='_blank'>DigitalOcean</a>
+				</p>
+				<br><br>
+				<p>Special thanks to:</p>
+				<p><a href="https://twitter.com/TimPietrusky">@TimPietrusky</a> &middot; <a href="https://twitter.com/Francext">@Francext </a> &middot; <a href="https://twitter.com/lrsbck">@lrsbck</a> &middot; <a href="https://twitter.com/EddHere">@EddHere</a> &middot; <a href="https://twitter.com/LukyVJ">@LukyVJ</a> &middot; <a href="https://twitter.com/CrocoDillon">@CrocoDillon</a> &middot; <a href="https://twitter.com/SaraSoueidan">@SaraSoueidan</a> &middot; <a href="https://twitter.com/DerVonDenBergen">@DerVonDenBergen</a> &middot; <a href="https://twitter.com/jshawl">@jshawl</a> &middot; <a href="https://twitter.com/_kevinatari">@_kevinatari</a> and all the other awesome contributors</p>
+			</p>
+			<br>
+			<br>
 			<p style='text-align:center'>&copy; right now ~ opentalk.me</p>
 			
 		</div>
