--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -126,7 +126,7 @@
 					<li>don't be a jerk.</li>
 					<li>the source is free for personal/private use, it cannot be used for commercial purposes</li>
 					<li>don't be a jerk.</li>
-					<li>I cannot be held reliable in any way for anything that happened on this web service. fu</li>
+					<li>I cannot be held liable in any way for anything that happened on this web service. fu</li>
 					<li>don't be a jerk.</li>
 					<li>It <b>is</b> possible that messages get deleted without notice</li>
 					<li>don't be a jerk.</li>
